smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-empty-members.smithy
// Parse error at line 4, column 12 near `}\n`: Missing required members of shape `com.foo#MyMap`: [`key`, `value`] | Model
namespace com.foo

map MyMap {}
